--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* General Reset */
 * {
     margin: 0;
     padding: 0;
@@ -408,6 +409,7 @@ section {
     color: #009dff;
 }
 
+/* Media Queries for smaller screens */
 @media (max-width: 768px) {
     .footer-links {
         flex-direction: column;
@@ -438,5 +440,33 @@ section {
 
     .input-box input {
         width: 80%;
+    }
+
+    /* Mobile navigation menu */
+    #menu-icon {
+        display: block;
+        cursor: pointer;
+    }
+
+    .nav-links {
+        display: none;
+        flex-direction: column;
+        gap: 1rem;
+        position: absolute;
+        top: 60px;
+        left: 50%;
+        transform: translateX(-50%);
+        background-color: rgb(0, 0, 0);
+        padding: 1rem;
+        border-radius: 1rem;
+        z-index: 999;
+    }
+
+    .nav-links.active {
+        display: flex;
+    }
+
+    #menu-icon.active + .nav-links {
+        display: flex;
     }
 }
